<resources>
    <string name="app_name">CartV7</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="item_image_view">Item Image View</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_sheet_image_view">Bottom Sheet Image View</string>
    <string name="available_stock_image_view">Available Stock Image View</string>
    <string name="stock">Stock</string>
    <string name="available">Available</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_image_view">Quantity Image View</string>
    <string name="discount">Discount</string>
    <string name="discount_image_view">Discount Image View</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="view_cart">View Cart</string>
    <string name="remove_from_cart">Remove from cart</string>
    <string name="cart">Cart</string>
    <string name="total">Total</string>
    <string name="payment">Payment</string>
    <string name="post_payment">Post Payment</string>
    <string name="cart_layout_image_view">Cart Layout Image View</string>
    <string name="remove">Remove</string>
    <string name="qty_with_colon">Qty:</string>
    <string name="dis_with_colon">Dis:</string>
    <string name="tol_with_colon">Tol:</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="credit_card_payment">Credit Card Payment</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="payment_options">Payment Options</string>

    <string-array name="payment_options_array">
        <item>Cash Payment</item>
        <item>Mpesa Payment</item>
        <item>Credit Card Payment</item>
    </string-array>

</resources>