<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhiteShade"
    android:orientation="vertical"
    tools:context=".ui.main.fragments.ItemBottomSheet">

    <ImageView
        android:id="@+id/item_photo_blob"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="1dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/bottom_sheet_image_view"
        android:padding="2dp"
        android:scaleType="fitCenter" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3dp">

            <TextView
                android:id="@+id/tv_item_name"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_item_price"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_price"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/available_items_image_view"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="1dp"
                    android:layout_marginRight="1dp"
                    android:contentDescription="@string/available_stock_image_view"
                    android:src="@drawable/ic_remaining_stock" />

                <TextView
                    android:id="@+id/available_items_text_view"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/available_items_image_view"
                    android:layout_toRightOf="@+id/available_items_image_view"
                    android:text="@string/stock" />

                <TextView
                    android:id="@+id/tv_items_available"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="end"
                    android:text="@string/available"
                    android:textAlignment="textEnd" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/quantity_image_view"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="1dp"
                    android:layout_marginRight="1dp"
                    android:contentDescription="@string/quantity_image_view"
                    android:src="@drawable/ic_quantity" />

                <TextView
                    android:id="@+id/item_quantity_text_view"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/quantity_image_view"
                    android:layout_toRightOf="@id/quantity_image_view"
                    android:text="@string/quantity" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="2dp">

<!--                    <com.google.android.material.button.MaterialButton-->
<!--                        android:id="@+id/btn_decrement"-->
<!--                        style="@style/Widget.App.Button.OutlinedButton.IconOnly"-->
<!--                        android:layout_width="25dp"-->
<!--                        android:layout_height="25dp"-->
<!--                        android:theme="@style/ButtonsTheme"-->
<!--                        app:icon="@drawable/ic_remove_icon" />-->

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_decrement"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        app:icon="@drawable/ic_remove_circle_dark"
                        android:theme="@style/ButtonsTheme"
                        style ="@style/Widget.App.Button.OutlinedButton.IconOnly" />

                    <EditText
                        android:id="@+id/et_item_quantity"
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        android:layout_gravity="end"
                        android:background="@drawable/edit_text_background"
                        android:gravity="center"
                        android:inputType="number"
                        android:text="1" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_increment"
                        style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:theme="@style/ButtonsTheme"
                        app:icon="@drawable/ic_add_circle_dark"
                        />

                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:padding="1dp">

                <ImageView
                    android:id="@+id/discount_image_view"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="1dp"
                    android:layout_marginRight="1dp"
                    android:contentDescription="@string/discount_image_view"
                    android:src="@drawable/ic_discount" />

                <TextView
                    android:id="@+id/item_discount_text_view"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/discount_image_view"
                    android:layout_toRightOf="@id/discount_image_view"
                    android:text="@string/discount" />

                <EditText
                    android:id="@+id/item_discount_edit_text"
                    android:layout_width="125dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/edit_text_background"
                    android:gravity="end"
                    android:inputType="numberDecimal"
                    android:text=""
                    android:textAlignment="textEnd" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_to_cart"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:padding="5dp"
            android:text="@string/add_to_cart"
            android:textColor="@android:color/white"
            android:theme="@style/ButtonsTheme"
            app:icon="@drawable/ic_add_to_cart"
            app:iconTint="@android:color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/view_item_cart"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:padding="5dp"
            android:text="@string/view_cart"
            android:textColor="@android:color/white"
            android:theme="@style/ButtonsTheme"
            android:visibility="gone"
            app:icon="@drawable/ic_view_cart" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/remove_item_from_cart"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:padding="5dp"
            android:text="@string/remove_from_cart"
            android:textColor="@android:color/white"
            android:theme="@style/ButtonsTheme"
            android:visibility="gone"
            app:icon="@drawable/ic_remove_from_cart" />

    </LinearLayout>


</LinearLayout>