<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_margin="5dp"
    android:background="@color/colorWhiteShade"
    android:padding="5dp"
    android:id="@+id/cart_card_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imv_cart_item"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/cart_layout_image_view"
                    android:layout_margin="1dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:id="@+id/tv_item_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_name"
                        style="@style/TextAppearance.AppCompat.Small"/>

                    <TextView
                        android:id="@+id/tv_item_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_price"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        style="@style/TextAppearance.AppCompat.Body1"/>

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_remove_from_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textColor="@android:color/white"
                android:padding="5dp"
                android:layout_margin="2dp"
                android:textAllCaps="false"
                android:layout_alignParentRight="true"
                android:theme="@style/ButtonsTheme"
                app:icon="@drawable/ic_remove_from_cart"
                app:iconTint="@android:color/white"/>

        </RelativeLayout>

        <View
            android:layout_gravity="center"
            android:layout_width="340dp"
            android:layout_height="1dp"
            android:background="@color/colorBlack20"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="5dp"
            android:layout_margin="1dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/quantity_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/quantity_image_view"
                    android:src="@drawable/ic_quantity"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:id="@+id/tv_display_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/quantity_image_view"
                    android:text="@string/qty_with_colon"
                    android:textSize="12sp"
                    android:layout_toRightOf="@id/quantity_image_view" />

                <TextView
                    android:id="@+id/tv_cart_item_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:textSize="12sp"
                    android:layout_toEndOf="@id/tv_display_quantity"
                    android:layout_centerVertical="true"
                    android:textStyle="bold"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_toRightOf="@id/tv_display_quantity" />

            </RelativeLayout>

            <View
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="1dp"
                android:background="@color/colorBlack20"
                android:rotation="90"/>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/discount_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/quantity_image_view"
                    android:src="@drawable/ic_discount"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:id="@+id/tv_display_discount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dis_with_colon"
                    android:textSize="12sp"
                    android:layout_toEndOf="@id/discount_image_view"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/discount_image_view" />

                <TextView
                    android:id="@+id/tv_cart_item_discount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="khs 1000"
                    android:textSize="12sp"
                    android:layout_toEndOf="@id/tv_display_discount"
                    android:layout_centerVertical="true"
                    android:textStyle="bold"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_toRightOf="@id/tv_display_discount" />

            </RelativeLayout>

            <View
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="1dp"
                android:background="@color/colorBlack20"
                android:rotation="90"/>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/total_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/quantity_image_view"
                    android:src="@drawable/ic_item_total"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:id="@+id/tv_display_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tol_with_colon"
                    android:textSize="12sp"
                    android:layout_toEndOf="@id/total_image_view"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/total_image_view" />

                <TextView
                    android:id="@+id/tv_cart_item_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ksh 1000"
                    android:textSize="12sp"
                    android:layout_toEndOf="@id/tv_display_total"
                    android:layout_centerVertical="true"
                    android:textStyle="bold"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_toRightOf="@id/tv_display_total" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>